# University

./: README.md
C++ Exercices/TP1/: CMakeLists.txt
C++ Exercices/TP1/src/: Cercle.cpp  Cercle.h  Error.cpp  Error.h  Point.cpp  Point.h  main.cpp
C++ Exercices/TP2/: CMakeLists.txt
C++ Exercices/TP2/src/: Point.cpp  Point.h  Polygone.cpp  Polygone.h  Vec3.cpp  Vec3.h  main.cpp
C++ Exercices/TP3/: CMakeLists.txt
C++ Exercices/TP3/DOCU/: example.eps  spline.eps
C++ Exercices/TP3/src/: Courbe.cpp  Courbe.h  CourbeBezi.cpp  CourbeBezi.h  CourbeLin.cpp  CourbeLin.h  CourbeSCR.cpp  CourbeSCR.h  Point.cpp  Point.h  main.cpp
Qt Exercices/MyFirstTP/: MyFirstTP.pro  ddd.cpp  ddd.h  main.cpp
Qt Exercices/myTimetable/: IcsEvent.cpp  TimeTable.cpp  main.cpp  myTimetable.pro  mymainwindow.cpp  mymainwindow.h  singleday_widget.cpp  singleday_widget.h
Qt Exercices/myTimetable/Ressources/: Edt.ics
